Bug 34478: SQUASH further changes to batch biblio operations
This patch makes a number of changes to finish incomplete work in
668cd06e1960a3878ec1c976ce7f2e1f93688468

Initial submissions to batch biblio operations have to accommodate
POSTed file data, so this patch makes changes to instances where we were
submitting biblionumbers in a URL.

We could also choose to make a change in tools/batch_delete_records.pl
and tools/batch_record_modification.pl to handle different "list"
operations differently based on the method of submission. This patch
presents only the client-side option.

The cart presented a unique problem in that it requires that data be
passed from the pop-up window to the parent window, something which
can't as easily be done with a form as with a URL. The workaround I came
up with is to dynamically generate the form in the parent page and
trigger the submission from there.

Also changed:

- More updated CSS to handle buttons inside dropdowns inside toolbars.
- Correct op names for the "list" operation in batch modify and delete

--- a/koha-tmpl/intranet-tmpl/prog/css/src/_toolbar.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/_toolbar.scss
@@ -31,7 +31,6 @@
             touch-action: manipulation;
             cursor: pointer;
             background-image: none;
-            padding: 6px 12px;
             box-shadow: none;
             border-radius: 4px;
             user-select: none;
@@ -45,7 +44,6 @@
                 text-decoration: none;
                 background-color: #DADADA;
                 color: #696969;
-                padding: 6px 12px;
             }
 
             &:active {
@@ -67,6 +65,17 @@
 
                 &.incart {
                     display: block;
+                }
+            }
+
+            &+.dropdown-menu {
+                .btn {
+                    &.btn-default {
+                        border-radius: 0;
+                        color: black;
+                        padding: 3px 20px;
+                        text-align: left;
+                    }
                 }
             }
         }
